Fixed getModel and initModels in DroolsHelper.java